# interslavic-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION.md  README.md
.github/workflows/: ci.yml
coallescor/: Cargo.toml  interslavic_output.txt
coallescor/src/: main.rs
crates/extractor/: Cargo.toml
crates/extractor/src/: main.rs
crates/interslavic/: Cargo.toml  README.md  build.rs
crates/interslavic-core/: Cargo.toml  README.md
crates/interslavic-core/src/: adjective.rs  case_endings.rs  cells.rs  derivation.rs  grammar.rs  irregular_verbs.rs  known_nouns.rs  lib.rs  noun.rs  orthography.rs  paradigm.rs  phono.rs  prepositions.rs  pronoun.rs  types.rs  utils.rs  verb.rs  verb_endings.rs
crates/interslavic-core/tests/: refactor_api.rs
crates/interslavic-extractor/: Cargo.toml
crates/interslavic-extractor/src/: main.rs
crates/interslavic/data/: dictionary_metadata.tsv
crates/interslavic/examples/: basic.rs  dump_paradigms.rs  sentence.rs  showcase.rs  speedmark.rs  test.rs  verb_paradigm.rs
crates/interslavic/src/: dictionary.rs  fingerprint.rs  lib.rs
crates/interslavic/tests/: accuracy_improvements.rs  comparison.rs  conjugation.rs  declension.rs  dictionary_metadata.rs  no_panic.rs  oov_gender_and_citation_echo.rs  paradigms.rs  participles.rs  pronoun_numeral.rs  readme_examples.rs  refactor_api.rs  surface.rs  variant_order.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
examples/: slava.rs  test.rs
experiments/interslavic-phrase/: CHANGELOG.md  Cargo.toml  README.md
experiments/interslavic-phrase/examples/: goldens.rs
experiments/interslavic-phrase/src/: ast.rs  discourse.rs  lib.rs  realize.rs  sexpr.rs
experiments/interslavic-phrase/tests/: goldens.rs  review_pr34_round2.rs  review_pr34_round3.rs  review_regressions.rs  sexpr_roundtrip.rs
src/: adjective.rs  basic.rs  case_endings.rs  caseforms.rs  dictionary.rs  dictionary_initialization.rs  enums.rs  irregular_verbs.rs  lib.rs  noun.rs  noun2.rs  verb.rs
tests/: accuracy_improvements.rs  conjugation.rs  declension.rs  dictionary_metadata.rs
tools/: compare-latest-sonic.js
