[workspace]
members = [
    "crates/interslavic",
    "crates/interslavic-core",
    "crates/interslavic-extractor",
    "crates/xtask",
]
default-members = [
    "crates/interslavic",
    "crates/interslavic-core",
    "crates/interslavic-extractor",
    "crates/xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gold-silver-copper/interslavic-rs"

[workspace.dependencies]
interslavic-core = { path = "crates/interslavic-core", version = "0.2.1" }
phf = { version = "0.12", default-features = false, features = ["macros"] }
