[workspace]
members = [
    "crates/interslavic",
    "crates/interslavic-core",
    "crates/interslavic-extractor",
    "crates/xtask",
]
default-members = [
    "crates/interslavic",
    "crates/interslavic-core",
    "crates/interslavic-extractor",
    "crates/xtask",
]
exclude = ["coallescor"]
resolver = "3"

[workspace.package]
authors = ["gold-silver-copper"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gold-silver-copper/interslavic"
keywords = ["interslavic", "inflection", "morphology", "nlp"]
categories = ["text-processing", "internationalization"]

[workspace.dependencies]
interslavic-core = { path = "crates/interslavic-core", version = "0.7.0" }
phf = { version = "0.12", default-features = false, features = ["macros"] }
