[package]
name = "interslavic"
version = "0.3.0"
edition.workspace = true
description = "Interslavic inflector with embedded dictionary metadata"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interslavic-core = { workspace = true }
phf = { workspace = true }
