[package]
name = "interslavic"
version = "0.4.0"
edition.workspace = true
description = "Fast Interslavic inflection with embedded generated dictionary metadata"
readme = "README.md"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interslavic-core = { workspace = true }
phf = { workspace = true }
