[package]
name = "interslavic-phrase"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
description = "Experiment: typed Interslavic syntax trees with an S-expression surface, realized through the interslavic inflection crate"
license.workspace = true
repository.workspace = true

[dependencies]
interslavic = { path = "../../crates/interslavic" }
