[package]
name = "interslavic-phrase"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Experiment: typed Interslavic syntax trees with an S-expression surface, realized through the interslavic inflection crate"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
interslavic = { path = "../../crates/interslavic", version = "0.14.0" }
